# spt-assistant

./: .cursorignore  .dockerignore  .gitignore  BlogPost.md  Dockerfile.api  Dockerfile.llm_orchestrator  Dockerfile.tts  Dockerfile.vad_stt  README.md  Requirements.md  build.sh  docker-stack.yml  gitpush.sh  install.sh  install_piper.sh  kill_all.sh  pyproject.toml  run.sh  test_client_tools.py
.cursor/rules/: coding-preferences.mdc  my-stack.mdc
app/: .env.example  main.py
app/api/v1/endpoints/: audio.py  conversations.py
app/core/: auth.py  config.py  logging_config.py  security.py
app/middleware/: cors.py  error_handler.py  logging.py
app/schemas/: conversation_config.py  ws_messages.py
app/services/: redis_service.py
client/: README.md  pyproject.toml  run_client.py  test_audio.py
client/mac/: README.md  run_app.sh
client/mac/SPTAssistant/: AppDelegate.swift  AppState.swift  Info.plist  SPTAssistant.entitlements  main.swift
client/mac/SPTAssistant.xcodeproj/: project.pbxproj
client/mac/SPTAssistant.xcodeproj/project.xcworkspace/xcuserdata/cve.xcuserdatad/: UserInterfaceState.xcuserstate
client/mac/SPTAssistant.xcodeproj/xcuserdata/cve.xcuserdatad/xcschemes/: xcschememanagement.plist
client/mac/SPTAssistant/Managers/: AudioManager.swift  ClientToolManager.swift  WebSocketManager.swift
client/mac/SPTAssistant/Models/: AudioDevice.swift
client/mac/SPTAssistant/Views/: ChatView.swift  ContentView.swift  SettingsView.swift
client/spt_assistant_client/: __init__.py  audio_processor.py  config.py  spt_client.py  websocket_client.py
client/tests/: __init__.py  test_client.py
docs/: connection_disconnect_implementation.md  macos_tools_implementation.md  technical-documentation.md
frontend/: README.md  config.js  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.css  App.tsx
frontend/src/audio/: pcm-processor.ts
frontend/src/components/: ChatDisplay.css  ChatDisplay.tsx  FuturisticAnimation.css  FuturisticAnimation.tsx  LlmResponseDisplay.tsx  PlaybackControls.tsx  SettingsPanel.tsx  TranscriptionDisplay.tsx  WaveformDisplay.tsx
frontend/src/hooks/: useAudioStreamer.ts  useStreamedAudioPlayer.ts  useWebSocket.ts
frontend/src/store/: useAppStore.ts
llm_orchestrator_worker/: .env.example  config.py  llm_service.py  logging_config.py  main.py  pyproject.toml  tool_router.py
tts_worker/: .env.example  config.py  logging_config.py  main.py  pyproject.toml  test_tts_publisher.py
tts_worker/core/: tts_abc.py
tts_worker/providers/: coqui_tts_service.py  elevenlabs_tts_service.py  piper_tts_service.py
vad_stt_worker/: .env.example  audio_processor.py  config.py  logging_config.py  main.py  pyproject.toml
