[project]
name = "spt-assistant"
version = "0.1.0"
description = "Real-time, French-first voice assistant platform."
authors = [{ name = "Christophe Verdier", email = "christophe.verdier@sponge-theory.ai" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "structlog>=24.1.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0",
    "httpx>=0.28.1",
]
requires-python = ">=3.12"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.rye]
# ... (keep existing rye config) ...

[tool.hatch.metadata]
# ... (keep existing hatch config) ...

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "mypy>=1.10.0",
  "ruff>=0.4.4",
]
