[project]
name = "llm-orchestrator-worker"
version = "0.1.0"
description = "LLM Orchestrator for the Voice Assistant Platform."
authors = [{ name = "Christophe Verdier", email = "christophe.verdier@sponge-theory.ai" }]
dependencies = [
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0", # For making HTTP requests to LLM APIs or tool endpoints
    "openai>=1.10.0", # Example LLM client library (FR-05)
    # Add MCP client library dependency here when available (FR-06)
    "nltk>=3.9.1",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "mypy>=1.10.0",
  "ruff>=0.4.4",
]

# Explicitly tell hatch which files to include for the wheel build
[tool.hatch.build.targets.wheel]
# Assuming these are the core python files for the package
include = [
    "main.py",
    "llm_service.py",
    "config.py",
    "logging_config.py",
    "tool_router.py",
    "__init__.py", 
] 
