[project]
name = "tts-worker"
version = "0.1.0"
description = "TTS Service for the Voice Assistant Platform using Piper-TTS."
authors = [{ name = "Christophe Verdier", email = "christophe.verdier@sponge-theory.ai" }]
dependencies = [
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.20.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "httpx>=0.28.1",
    "elevenlabs>=1.58.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.23.2",
    "async-timeout>=4.0.3",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "coqui-tts>=0.26.1",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "mypy>=1.10.0",
  "ruff>=0.4.4",
]

# Explicitly tell hatch which files to include for the wheel build
[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "synthesizer.py",
    "config.py",
    "logging_config.py",
    "__init__.py", 
] 


